tests/lean/inaccessible2.lean.expected.out
inaccessible2.lean:7:7: error: invalid occurrence of 'inaccessible' annotation, it must only occur in patterns
